# hifi-trimmer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  barcode_actions.yaml  barcodes_key.tsv  hifi_trimmer.py  pyproject.toml  test.hits  test.summary  test.summary.json  truseq.yaml
.github/: pytest.yaml
.github/workflows/: pytest.yml  release.yml
examples/: example_adapter.yaml
src/hifi_trimmer/: BamFilter.py  BamFilterer.py  BamTrimmer.py  BlastProcessor.py  SummariseBlastResults.py  bed.py  blast.py  cli.py  duckdb.py  hifi_trimmer.py  output.py  read_files.py  summary.py  utils.py
tests/: test_cli.py  test_duckdb.py
tests/data/: test.bam  test.bed  test.hits  test.summary  test.summary.json
tests/data/hits/: test.filtered.bam  test.filtered.cram  test.filtered.sam  test.hits  test.summary.json
tests/data/no_hits/: test.bam  test.filtered.bam  test.filtered.cram  test.filtered.sam  test.summary.json  test.yaml
tests/data/no_valid_hits/: test.filtered.bam  test.filtered.cram  test.filtered.sam  test.summary.json
