[project]
name = "hifi_trimmer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bgzip>=0.5.0",
    "click>=8.1.8",
    "polars>=1.21.0",
    "pysam>=0.23.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
hifi_trimmer = "hifi_trimmer.hifi_trimmer:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
