[project]
name = "hifi_trimmer"
version = "3.1.0"
authors = [{ name = "Jim Downie", email = "jd42@sanger.ac.uk" }]
description = """
hifi-trimmer is a tool for filtering and trimming extraneous adapter hits from a
HiFi read set using a BLAST search.
"""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "bgzip>=0.5.1",
    "click>=8.1.8",
    "loguru>=0.7.3",
    "polars<=1.22.0",
    "pysam>=0.23.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/sanger-tol/hifi-trimmer/"
Issues = "https://github.com/sanger-tol/hifi-trimmer/issues"

[project.scripts]
hifi-trimmer = "hifi_trimmer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.3.4"]
